<resources>
    <string name="app_name">xRenovation Admin App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="account">Account</string>
    <string name="add">Add</string>
    <string name="settings">Settings</string>
    <string name="map">Map</string>
    <string name="signupbyemail_text">Sign Up By Email</string>
    <string name="button_sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_up_error">Registration error occurred :(</string>
    <string name="sign_up_error_email_exists">This email is already being used</string>
    <string name="sign_up_error_many_attempts">Too many attempts, try again later</string>
    <string name="verification_email_sent">Verification email has been sent</string>
    <string name="incorrect_email">Incorrect Email</string>
    <string name="different_passwords">The passwords are different</string>
    <string name="weak_password">The password must be at least 6 characters long</string>
    <string name="sign_up_exception">Registration error, please try again later</string>
    <string name="user_not_found">Couldn\'t find user associated with this email</string>
    <string name="invalid_id_token">Invalid id token</string>
    <string name="sign_in_with_email">Sign In with email</string>
    <string name="button_sign_in">Sign In</string>
    <string name="already_signed_up">Already signed up?</string>
    <string name="editTextPersonName">Name</string>
    <string name="enter_name_textview">Welcome to xRenovation! \n Enter your name, please</string>
    <string name="button_enter_name">Enter</string>
    <string name="hi_someone">Hi, </string>
    <string name="button_send_email_verification">Send email</string>
    <string name="email_verified">Email verified</string>
    <string name="email_not_verified">Email not verified</string>
    <string name="get_account_info_error">Error, please try again :(</string>
    <string name="log_out">Log out</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="dialog_log_out">Log out?</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="code">Code</string>
    <string name="password_reset">Reset password</string>
    <string name="password_reset_email_sent">Password reset email sent</string>
    <string name="password_reset_email_error">Error occurred during password reset :(</string>
    <string name="enter_email_textview">Enter your email</string>
    <string name="picture_not_uploaded">Couldn\'t upload picture, please try again :(</string>
    <string name="error_try_again">Error occurred, please try again :(</string>
    <string name="set_account_info_error">Error occurred, please try again :(</string>
    <string name="invalid_password">Wrong password, please try again</string>
    <string name="wrong_email_or_password">Wrong email or password</string>
    <string name="email_is_empty">Enter email, please</string>
    <string name="password_is_empty">Enter password, please</string>
    <string name="no_network_try_again">No network, please try again</string>
    <string name="try_again">Try again</string>
    <string name="add_house">Add house</string>
    <string name="address">Address</string>
    <string name="moscow">Москва</string>
    <string name="nao">Новомосковский административный округ</string>
    <string name="tao">Троицкий административный округ</string>
    <string name="zelenograd">Зеленоград</string>
    <string name="pos_akulovo">посёлок Акулово</string>
    <string name="der_tolstop">деревня Толстопальцево</string>
    <string name="pos_tolstop">посёлок Толстопальцево</string>
    <string name="pos_rublevo">посёлок Рублёво</string>
    <string name="pos_vnukovo">посёлок Внуково</string>
    <string name="cfo">Центральный федеральный округ</string>
    <string name="not_moscow">This address doesn\'t belong to Moscow</string>
    <string name="ready">Ready</string>
    <string name="number_of_floors">Number of floors</string>
    <string name="floors">Floors</string>
    <string name="variable_floors">Variable floors</string>
    <string name="number_of_flats">Number of flats</string>
    <string name="flats">Flats</string>
    <string name="construction_year">Year of construction</string>
    <string name="year">Year</string>
    <string name="description">Description</string>
    <string name="photos">Photos</string>
    <string name="links">Links</string>
    <string name="add_url">Add URL</string>
    <string name="cancel">Cancel</string>
    <string name="no_address_selected">Enter address</string>
    <string name="no_floors_entered">Enter the number of floors</string>
    <string name="no_flats_entered">Enter the number of flats</string>
    <string name="no_year_entered">Enter the construction year</string>
    <string name="no_description_added">The description is too short</string>
    <string name="no_photos_selected">Select at least 1 photo</string>
    <string name="no_house_in_address">The address doesn\'t have a house</string>
    <string name="house_added">House added successfully</string>
    <string name="send_comment">Send</string>
    <string name="leave_comment">Leave comment here</string>
    <string name="comments">Comments</string>
    <string name="suggest_house_correction">Suggest correction</string>
    <string name="correction_added">Correction added successfully!</string>
    <string name="post_timeout">You have reached daily limit :(</string>
    <string name="user_not_logged_in">User not logged in</string>
    <string name="edit_house">Edit house</string>
    <string name="delete_house">Delete house</string>
    <string name="delete_photo">Delete Photo?</string>
    <string name="delete_url">Delete Url ?</string>
    <string name="house_suggestions">House Suggestions</string>
    <string name="comment_suggestions">Comment suggestions</string>
    <string name="correction_suggestions">Correction suggestions</string>
    <string name="delete_correction">Delete correction?</string>
    <string name="edit_suggested_house">Edit suggested House</string>
    <string name="publish_house">publish house</string>
    <string name="publish_comment">Publish comment</string>
    <string name="delete_comment">Delete comment</string>
    <string name="delete_suggested_house">Delete house</string>
    <string name="failure_delete_suggested_house_point">Failed to delete house</string>
    <string name="success_delete_suggested_house_point">House deleted</string>
    <string name="success_delete_suggested_comment">Comment deleted</string>
    <string name="failure_delete_suggested_comment">Failed to delete comment</string>
    <string name="success_add_suggested_comment">Comment added successfully</string>
    <string name="failure_add_suggested_comment">Failed to publish comment</string>
    <string name="success_add_suggested_house">House added successfully</string>
    <string name="failure_add_suggested_house">Failed to add house</string>
</resources>